src/styles/index.scss
svg {
  border: 1px solid black;
}

circle.node.branch {
  stroke: #3e2914;
  stroke-width: 3px;
}

circle.node.leaf {
  stroke: darkgreen;
  stroke-width: 2px;
}

.node.branch text { font: 12px sans-serif; }

.link {
  fill: #503316;
  fill-opacity: 30%;
  stroke: #654321;
}

.trunk {
  stroke-width: 10px;
}

link.lower.branches {
  stroke-width: 5px;
}

link.middle.branches {
  stroke-width: 3px;
}

link.upper.branches {
  stroke-width: 1px;
}

